--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,8 @@ project(test C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(test main.c src/PokerHand.c src/isFlush.c inc/methods.h
-        src/ErrorHandler.c inc/minilib.h src/lib.c
-        src/mx_del_extra_whitespaces.c src/mx_strtrim.c
-        src/getPokerHand.c src/sort_poker_hand.c src/print_result.c)
+add_executable(test main.c src/PokerHand.c src/Combinations/isFlush.c inc/methods.h
+        src/utils/ErrorHandler.c inc/minilib.h src/utils/lib.c
+        src/utils/mx_del_extra_whitespaces.c src/utils/mx_strtrim.c
+        src/utils/getPokerHand.c src/utils/sort_poker_hand.c src/utils/print_result.c src/Combinations/isStraight.c src/utils/PokerHandErraser.c src/utils/GenerateCard.c src/utils/is4s.c)
 include_directories(inc)
